# Reversi

./: Board.cpp  Board.h  CMakeLists.txt  Console.cpp  Disk.cpp  Game.cpp  GameRules.cpp  GameRules.h  HumanPlayer.cpp  Main.cpp  Player.cpp  Player.h  Reversi_I.cpp  Reversi_I.h  makefile
etc/: info.txt
exe/: client_config.txt
include/: AI_Player.h  Board.h  Client.h  Console.h  Disk.h  Game.h  GameRules.h  HumanPlayer.h  Player.h  RemotePlayer.h  Reversi_I.h
src/: AI_Player.cpp  Board.cpp  Client.cpp  Console.cpp  Disk.cpp  Game.cpp  GameRules.cpp  HumanPlayer.cpp  Main.cpp  Player.cpp  RemotePlayer.cpp  Reversi_I.cpp
src/Client/: AI_Player.cpp  Board.cpp  Client.cpp  Console.cpp  Disk.cpp  Game.cpp  GameRules.cpp  HumanPlayer.cpp  Main.cpp  Player.cpp  RemotePlayer.cpp  Reversi_I.cpp
src/Client/include/: AI_Player.h  Board.h  Client.h  Console.h  Disk.h  Game.h  GameRules.h  HumanPlayer.h  Player.h  RemotePlayer.h  Reversi_I.h
test/: AI_test.cpp  GameRules_test.cpp  gtestMain.cpp  gtest_main.cpp  test_Board.cpp  test_Board.h
